vpc/cdk.out/VpcStack.template.json
{
  "Resources": {
    "TheVPC92636AB0": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsHostnames": true,
        "EnableDnsSupport": true,
        "InstanceTenancy": "default",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/Resource"
      }
    },
    "TheVPCPublicSubnet1Subnet770D4FF2": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/18",
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet1/Subnet"
      }
    },
    "TheVPCPublicSubnet1RouteTable17DA183D": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet1/RouteTable"
      }
    },
    "TheVPCPublicSubnet1RouteTableAssociationE5186D77": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheVPCPublicSubnet1RouteTable17DA183D"
        },
        "SubnetId": {
          "Ref": "TheVPCPublicSubnet1Subnet770D4FF2"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet1/RouteTableAssociation"
      }
    },
    "TheVPCPublicSubnet1DefaultRoute6D26543F": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheVPCPublicSubnet1RouteTable17DA183D"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "TheVPCIGWFA25CC08"
        }
      },
      "DependsOn": [
        "TheVPCVPCGWC9B93E30"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet1/DefaultRoute"
      }
    },
    "TheVPCPublicSubnet1EIP4412F690": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet1/EIP"
      }
    },
    "TheVPCPublicSubnet1NATGatewayC61D892B": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "TheVPCPublicSubnet1Subnet770D4FF2"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "TheVPCPublicSubnet1EIP4412F690",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PublicSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet1/NATGateway"
      }
    },
    "TheVPCPublicSubnet2Subnet73F96DA9": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.64.0/18",
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": true,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Public"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Public"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet2/Subnet"
      }
    },
    "TheVPCPublicSubnet2RouteTable3609F42C": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet2/RouteTable"
      }
    },
    "TheVPCPublicSubnet2RouteTableAssociationB4B0A733": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheVPCPublicSubnet2RouteTable3609F42C"
        },
        "SubnetId": {
          "Ref": "TheVPCPublicSubnet2Subnet73F96DA9"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet2/RouteTableAssociation"
      }
    },
    "TheVPCPublicSubnet2DefaultRouteFEB062B2": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheVPCPublicSubnet2RouteTable3609F42C"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "TheVPCIGWFA25CC08"
        }
      },
      "DependsOn": [
        "TheVPCVPCGWC9B93E30"
      ],
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet2/DefaultRoute"
      }
    },
    "TheVPCPublicSubnet2EIP5AAFF9FA": {
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc",
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet2/EIP"
      }
    },
    "TheVPCPublicSubnet2NATGatewayB437CFAF": {
      "Type": "AWS::EC2::NatGateway",
      "Properties": {
        "SubnetId": {
          "Ref": "TheVPCPublicSubnet2Subnet73F96DA9"
        },
        "AllocationId": {
          "Fn::GetAtt": [
            "TheVPCPublicSubnet2EIP5AAFF9FA",
            "AllocationId"
          ]
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PublicSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PublicSubnet2/NATGateway"
      }
    },
    "TheVPCPrivateSubnet1Subnet571D3690": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.128.0/18",
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            0,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PrivateSubnet1/Subnet"
      }
    },
    "TheVPCPrivateSubnet1RouteTableF6513BC2": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PrivateSubnet1"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PrivateSubnet1/RouteTable"
      }
    },
    "TheVPCPrivateSubnet1RouteTableAssociation46F1FFFC": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheVPCPrivateSubnet1RouteTableF6513BC2"
        },
        "SubnetId": {
          "Ref": "TheVPCPrivateSubnet1Subnet571D3690"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PrivateSubnet1/RouteTableAssociation"
      }
    },
    "TheVPCPrivateSubnet1DefaultRouteD1B9E467": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheVPCPrivateSubnet1RouteTableF6513BC2"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "TheVPCPublicSubnet1NATGatewayC61D892B"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PrivateSubnet1/DefaultRoute"
      }
    },
    "TheVPCPrivateSubnet2SubnetCC3D7013": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.192.0/18",
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "AvailabilityZone": {
          "Fn::Select": [
            1,
            {
              "Fn::GetAZs": ""
            }
          ]
        },
        "MapPublicIpOnLaunch": false,
        "Tags": [
          {
            "Key": "aws-cdk:subnet-name",
            "Value": "Private"
          },
          {
            "Key": "aws-cdk:subnet-type",
            "Value": "Private"
          },
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PrivateSubnet2/Subnet"
      }
    },
    "TheVPCPrivateSubnet2RouteTable9AC81FAC": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC/PrivateSubnet2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PrivateSubnet2/RouteTable"
      }
    },
    "TheVPCPrivateSubnet2RouteTableAssociation336D47D1": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheVPCPrivateSubnet2RouteTable9AC81FAC"
        },
        "SubnetId": {
          "Ref": "TheVPCPrivateSubnet2SubnetCC3D7013"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PrivateSubnet2/RouteTableAssociation"
      }
    },
    "TheVPCPrivateSubnet2DefaultRoute52A1F245": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "TheVPCPrivateSubnet2RouteTable9AC81FAC"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "TheVPCPublicSubnet2NATGatewayB437CFAF"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/PrivateSubnet2/DefaultRoute"
      }
    },
    "TheVPCIGWFA25CC08": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "VpcStack/TheVPC"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/IGW"
      }
    },
    "TheVPCVPCGWC9B93E30": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "TheVPC92636AB0"
        },
        "InternetGatewayId": {
          "Ref": "TheVPCIGWFA25CC08"
        }
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/TheVPC/VPCGW"
      }
    },
    "CDKMetadata": {
      "Type": "AWS::CDK::Metadata",
      "Properties": {
        "Analytics": "v2:deflate64:H4sIAAAAAAAA/02OzQ6CMBCEn8V7qfw8ASHGcDENGK6mlDWsQmvoVkII7y6Iiqf5djKZnZAHEfd3sreequ5egyUfc5LqzmbrAirkY/FQLLnqQiRMuLJBlbtSAy3eRplxBGdZNrD5mxdbaxRKQqN/4QUOqVjkJOkoCXo5MNHhc8atONUE3czfwLrkc8U0T61b0DSxDKxxnXr3/nNidIXL54mJgWqj9xEPfB7ubhbR65wmbIFnq74Amp1rsw8BAAA="
      },
      "Metadata": {
        "aws:cdk:path": "VpcStack/CDKMetadata/Default"
      },
      "Condition": "CDKMetadataAvailable"
    }
  },
  "Conditions": {
    "CDKMetadataAvailable": {
      "Fn::Or": [
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "af-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-northeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ap-southeast-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "ca-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "cn-northwest-1"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-central-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-north-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-2"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "eu-west-3"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "me-south-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "sa-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-east-2"
              ]
            }
          ]
        },
        {
          "Fn::Or": [
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-1"
              ]
            },
            {
              "Fn::Equals": [
                {
                  "Ref": "AWS::Region"
                },
                "us-west-2"
              ]
            }
          ]
        }
      ]
    }
  },
  "Parameters": {
    "BootstrapVersion": {
      "Type": "AWS::SSM::Parameter::Value<String>",
      "Default": "/cdk-bootstrap/hnb659fds/version",
      "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]"
    }
  },
  "Rules": {
    "CheckBootstrapVersion": {
      "Assertions": [
        {
          "Assert": {
            "Fn::Not": [
              {
                "Fn::Contains": [
                  [
                    "1",
                    "2",
                    "3",
                    "4",
                    "5"
                  ],
                  {
                    "Ref": "BootstrapVersion"
                  }
                ]
              }
            ]
          },
          "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI."
        }
      ]
    }
  }
}
